--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,23 +74,23 @@ jobs:
                   script: |-
                       yarn install --frozen-lockfile --prefer-offline
 
-            - name: Lint @duckdb/duckdb-wasm
+            - name: Lint @applyinnovations/duckdb-wasm
               uses: duckdb/duckdb-wasm-ci-env@f10a0954b7b2b98e8526e0f7bbcb10e614defcbd
               with:
                   script: |-
-                      yarn workspace @duckdb/duckdb-wasm run lint
+                      yarn workspace @applyinnovations/duckdb-wasm run lint
 
-            - name: Lint @duckdb/duckdb-wasm-shell
+            - name: Lint @applyinnovations/duckdb-wasm-shell
               uses: duckdb/duckdb-wasm-ci-env@f10a0954b7b2b98e8526e0f7bbcb10e614defcbd
               with:
                   script: |-
-                      yarn workspace @duckdb/duckdb-wasm-shell run lint
+                      yarn workspace @applyinnovations/duckdb-wasm-shell run lint
 
-            - name: Lint @duckdb/benchmarks
+            - name: Lint @applyinnovations/benchmarks
               uses: duckdb/duckdb-wasm-ci-env@f10a0954b7b2b98e8526e0f7bbcb10e614defcbd
               with:
                   script: |-
-                      yarn workspace @duckdb/benchmarks run lint
+                      yarn workspace @applyinnovations/benchmarks run lint
 
     tpchgen:
         name: TPCH Generator
@@ -705,56 +705,56 @@ jobs:
                       ./scripts/generate_uni.sh
                       ./scripts/npm_version.sh
 
-            - name: Build @duckdb/duckdb-wasm
+            - name: Build @applyinnovations/duckdb-wasm
               shell: bash
               run: |
                       rm -rf ./packages/duckdb-wasm/dist/
-                      yarn workspace @duckdb/duckdb-wasm build:release
-                      yarn workspace @duckdb/duckdb-wasm docs
+                      yarn workspace @applyinnovations/duckdb-wasm build:release
+                      yarn workspace @applyinnovations/duckdb-wasm docs
 
-            - name: Build @duckdb/duckdb-wasm-shell
+            - name: Build @applyinnovations/duckdb-wasm-shell
               shell: bash
               run: |
                       rm -rf ./packages/duckdb-wasm-shell/dist/
-                      yarn workspace @duckdb/duckdb-wasm-shell install:wasmpack
-                      yarn workspace @duckdb/duckdb-wasm-shell build:release
+                      yarn workspace @applyinnovations/duckdb-wasm-shell install:wasmpack
+                      yarn workspace @applyinnovations/duckdb-wasm-shell build:release
 
-            - name: Build @duckdb/duckdb-wasm-app
+            - name: Build @applyinnovations/duckdb-wasm-app
               shell: bash
               run: |
                       rm -rf ./packages/duckdb-wasm-app/build/
-                      yarn workspace @duckdb/duckdb-wasm-app build:release
+                      yarn workspace @applyinnovations/duckdb-wasm-app build:release
 
-            - name: Test @duckdb/duckdb-wasm on Chrome
+            - name: Test @applyinnovations/duckdb-wasm on Chrome
               shell: bash
               run: |
-                      CHROME_BIN=`which google-chrome` yarn workspace @duckdb/duckdb-wasm test:chrome
+                      CHROME_BIN=`which google-chrome` yarn workspace @applyinnovations/duckdb-wasm test:chrome
             
-            #            - name: Test @duckdb/duckdb-wasm on Firefox
+            #            - name: Test @applyinnovations/duckdb-wasm on Firefox
             #              uses: duckdb/duckdb-wasm-ci-env@f10a0954b7b2b98e8526e0f7bbcb10e614defcbd
             #              with:
             #                  script: |-
-            #                      yarn workspace @duckdb/duckdb-wasm test:firefox
+            #                      yarn workspace @applyinnovations/duckdb-wasm test:firefox
 
-            - name: Test @duckdb/duckdb-wasm on Node.js
+            - name: Test @applyinnovations/duckdb-wasm on Node.js
               shell: bash
               run: |
-                      yarn workspace @duckdb/duckdb-wasm test:node
+                      yarn workspace @applyinnovations/duckdb-wasm test:node
 
-            - name: Coverage @duckdb/duckdb-wasm
+            - name: Coverage @applyinnovations/duckdb-wasm
               shell: bash
               run: |
-                       CHROME_BIN=`which google-chrome` yarn workspace @duckdb/duckdb-wasm test:chrome:coverage
+                       CHROME_BIN=`which google-chrome` yarn workspace @applyinnovations/duckdb-wasm test:chrome:coverage
 
             - name: Build examples
               shell: bash
               run: |
                       yarn install
-                      yarn workspace @duckdb/duckdb-wasm-examples-bare-node test
-                      yarn workspace @duckdb/duckdb-wasm-examples-bare-browser build
-                      yarn workspace @duckdb/duckdb-wasm-examples-esbuild-node build
-                      yarn workspace @duckdb/duckdb-wasm-examples-esbuild-node test
-                      yarn workspace @duckdb/duckdb-wasm-examples-esbuild-browser build
+                      yarn workspace @applyinnovations/duckdb-wasm-examples-bare-node test
+                      yarn workspace @applyinnovations/duckdb-wasm-examples-bare-browser build
+                      yarn workspace @applyinnovations/duckdb-wasm-examples-esbuild-node build
+                      yarn workspace @applyinnovations/duckdb-wasm-examples-esbuild-node test
+                      yarn workspace @applyinnovations/duckdb-wasm-examples-esbuild-browser build
 
             - name: Package
               shell: bash
@@ -765,17 +765,17 @@ jobs:
                   name: duckdb-wasm-packages
                   path: duckdb-wasm-packages.zip
 
-            - name: Build @duckdb/benchmarks
+            - name: Build @applyinnovations/benchmarks
               shell: bash
               run: |
                 rm -r packages/duckdb-wasm/node_modules/*
-                yarn workspace @duckdb/benchmarks build
-                yarn workspace @duckdb/benchmarks bench:system:sort:int
-                yarn workspace @duckdb/benchmarks bench:system:join:2
-                yarn workspace @duckdb/benchmarks bench:system:join:3
-                yarn workspace @duckdb/benchmarks bench:system:regex
-                yarn workspace @duckdb/benchmarks bench:system:sum:int
-                yarn workspace @duckdb/benchmarks bench:system:sum:csv
+                yarn workspace @applyinnovations/benchmarks build
+                yarn workspace @applyinnovations/benchmarks bench:system:sort:int
+                yarn workspace @applyinnovations/benchmarks bench:system:join:2
+                yarn workspace @applyinnovations/benchmarks bench:system:join:3
+                yarn workspace @applyinnovations/benchmarks bench:system:regex
+                yarn workspace @applyinnovations/benchmarks bench:system:sum:int
+                yarn workspace @applyinnovations/benchmarks bench:system:sum:csv
 
             - name: Upload reports
               uses: actions/upload-artifact@v4
@@ -807,10 +807,10 @@ jobs:
               if: github.ref == 'refs/heads/main'
               shell: bash
               run: |
-                yarn workspace @duckdb/benchmarks bench:system:tpch:duckdb 0.01
-                yarn workspace @duckdb/benchmarks bench:system:tpch:sqljs 0.01
-                yarn workspace @duckdb/benchmarks bench:system:tpch:arquero 0.01
-                yarn workspace @duckdb/benchmarks bench:system:tpch:lovefield 0.01
+                yarn workspace @applyinnovations/benchmarks bench:system:tpch:duckdb 0.01
+                yarn workspace @applyinnovations/benchmarks bench:system:tpch:sqljs 0.01
+                yarn workspace @applyinnovations/benchmarks bench:system:tpch:arquero 0.01
+                yarn workspace @applyinnovations/benchmarks bench:system:tpch:lovefield 0.01
 
             - name: Upload reports TPCH 0.01
               if: github.ref == 'refs/heads/main'
@@ -841,10 +841,10 @@ jobs:
               if: github.ref == 'refs/heads/main'
               shell: bash
               run: |
-                yarn workspace @duckdb/benchmarks bench:system:tpch:duckdb 0.1
-                yarn workspace @duckdb/benchmarks bench:system:tpch:sqljs 0.1
-                yarn workspace @duckdb/benchmarks bench:system:tpch:arquero 0.1
-                yarn workspace @duckdb/benchmarks bench:system:tpch:lovefield 0.1
+                yarn workspace @applyinnovations/benchmarks bench:system:tpch:duckdb 0.1
+                yarn workspace @applyinnovations/benchmarks bench:system:tpch:sqljs 0.1
+                yarn workspace @applyinnovations/benchmarks bench:system:tpch:arquero 0.1
+                yarn workspace @applyinnovations/benchmarks bench:system:tpch:lovefield 0.1
 
             - name: Upload reports TPCH 0.1
               if: github.ref == 'refs/heads/main'
@@ -875,10 +875,10 @@ jobs:
               if: github.ref == 'refs/heads/main'
               shell: bash
               run: |
-                yarn workspace @duckdb/benchmarks bench:system:tpch:duckdb 0.25
-                yarn workspace @duckdb/benchmarks bench:system:tpch:sqljs 0.25
-                yarn workspace @duckdb/benchmarks bench:system:tpch:arquero 0.25
-                yarn workspace @duckdb/benchmarks bench:system:tpch:lovefield 0.25
+                yarn workspace @applyinnovations/benchmarks bench:system:tpch:duckdb 0.25
+                yarn workspace @applyinnovations/benchmarks bench:system:tpch:sqljs 0.25
+                yarn workspace @applyinnovations/benchmarks bench:system:tpch:arquero 0.25
+                yarn workspace @applyinnovations/benchmarks bench:system:tpch:lovefield 0.25
 
             - name: Upload reports TPCH 0.25
               if: github.ref == 'refs/heads/main'
@@ -909,10 +909,10 @@ jobs:
               if: github.ref == 'refs/heads/main'
               shell: bash
               run: |
-                yarn workspace @duckdb/benchmarks bench:system:tpch:duckdb 0.5
-                yarn workspace @duckdb/benchmarks bench:system:tpch:sqljs 0.5
-                yarn workspace @duckdb/benchmarks bench:system:tpch:arquero 0.5
-                yarn workspace @duckdb/benchmarks bench:system:tpch:lovefield 0.5
+                yarn workspace @applyinnovations/benchmarks bench:system:tpch:duckdb 0.5
+                yarn workspace @applyinnovations/benchmarks bench:system:tpch:sqljs 0.5
+                yarn workspace @applyinnovations/benchmarks bench:system:tpch:arquero 0.5
+                yarn workspace @applyinnovations/benchmarks bench:system:tpch:lovefield 0.5
 
             - name: Upload reports TPCH 0.5
               if: github.ref == 'refs/heads/main'
@@ -1019,30 +1019,30 @@ jobs:
                       ./scripts/generate_uni.sh
                       ./scripts/npm_version.sh
 
-            - name: Build @duckdb/duckdb-wasm
+            - name: Build @applyinnovations/duckdb-wasm
               shell: bash
               run: |
                       rm -rf ./packages/duckdb-wasm/dist/
-                      yarn workspace @duckdb/duckdb-wasm build:release
-                      yarn workspace @duckdb/duckdb-wasm docs
+                      yarn workspace @applyinnovations/duckdb-wasm build:release
+                      yarn workspace @applyinnovations/duckdb-wasm docs
 
-            - name: Build @duckdb/duckdb-wasm-shell
+            - name: Build @applyinnovations/duckdb-wasm-shell
               shell: bash
               run: |
                       rm -rf ./packages/duckdb-wasm-shell/dist/
-                      yarn workspace @duckdb/duckdb-wasm-shell install:wasmpack
-                      yarn workspace @duckdb/duckdb-wasm-shell build:release
+                      yarn workspace @applyinnovations/duckdb-wasm-shell install:wasmpack
+                      yarn workspace @applyinnovations/duckdb-wasm-shell build:release
 
-            - name: Build @duckdb/duckdb-wasm-app
+            - name: Build @applyinnovations/duckdb-wasm-app
               shell: bash
               run: |
                       rm -rf ./packages/duckdb-wasm-app/build/
-                      yarn workspace @duckdb/duckdb-wasm-app build:release
+                      yarn workspace @applyinnovations/duckdb-wasm-app build:release
 
-            #- name: Coverage @duckdb/duckdb-wasm
+            #- name: Coverage @applyinnovations/duckdb-wasm
             #  shell: bash
             #  run: |
-            #           CHROME_BIN=`which google-chrome` yarn workspace @duckdb/duckdb-wasm test:chrome:coverage
+            #           CHROME_BIN=`which google-chrome` yarn workspace @applyinnovations/duckdb-wasm test:chrome:coverage
 
             - name: Package
               shell: bash
@@ -1057,21 +1057,21 @@ jobs:
               run: |
                   ./scripts/npm_measure_lib.sh
 
-            - name: Test @duckdb/duckdb-wasm on Chrome
+            - name: Test @applyinnovations/duckdb-wasm on Chrome
               shell: bash
               run: |
-                      CHROME_BIN=`which google-chrome` yarn workspace @duckdb/duckdb-wasm test:chrome
+                      CHROME_BIN=`which google-chrome` yarn workspace @applyinnovations/duckdb-wasm test:chrome
             
-            #            - name: Test @duckdb/duckdb-wasm on Firefox
+            #            - name: Test @applyinnovations/duckdb-wasm on Firefox
             #              uses: duckdb/duckdb-wasm-ci-env@f10a0954b7b2b98e8526e0f7bbcb10e614defcbd
             #              with:
             #                  script: |-
-            #                      yarn workspace @duckdb/duckdb-wasm test:firefox
+            #                      yarn workspace @applyinnovations/duckdb-wasm test:firefox
 
-            - name: Test @duckdb/duckdb-wasm on Node.js
+            - name: Test @applyinnovations/duckdb-wasm on Node.js
               shell: bash
               run: |
-                      yarn workspace @duckdb/duckdb-wasm test:node
+                      yarn workspace @applyinnovations/duckdb-wasm test:node
 
             - name: Deploy GitHub Page
               if: github.ref == 'refs/heads/main'
