--- a/examples/esbuild-browser/package.json
+++ b/examples/esbuild-browser/package.json
@@ -1,11 +1,11 @@
 {
     "private": true,
-    "name": "@duckdb/duckdb-wasm-examples-esbuild-browser",
+    "name": "@applyinnovations/duckdb-wasm-examples-esbuild-browser",
     "version": "0.0.1",
     "main": "index.js",
     "license": "MIT",
     "dependencies": {
-        "@duckdb/duckdb-wasm": "file:../../packages/duckdb-wasm"
+        "@applyinnovations/duckdb-wasm": "file:../../packages/duckdb-wasm"
     },
     "devDependencies": {
         "esbuild": "^0.20.2",
