--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "repository": {
         "type": "git",
-        "url": "https://github.com/duckdb/duckdb-wasm.git"
+        "url": "https://github.com/applyinnovations/duckdb-wasm.git"
     },
     "private": true,
     "workspaces": [
@@ -9,11 +9,11 @@
         "examples/*"
     ],
     "scripts": {
-        "lint:fix": "yarn workspace @duckdb/duckdb-wasm lint --fix && yarn workspace @duckdb/benchmarks lint --fix && yarn workspace @duckdb/duckdb-wasm-shell lint --fix",
-        "docs": "yarn workspace @duckdb/duckdb-wasm docs",
-        "benchmarks:build:browser": "yarn workspace @duckdb/benchmarks build:browser",
-        "benchmarks:build:node": "yarn workspace @duckdb/benchmarks build:node",
-        "benchmarks:build": "yarn workspace @duckdb/benchmarks build"
+        "lint:fix": "yarn workspace @applyinnovations/duckdb-wasm lint --fix && yarn workspace @applyinnovations/benchmarks lint --fix && yarn workspace @applyinnovations/duckdb-wasm-shell lint --fix",
+        "docs": "yarn workspace @applyinnovations/duckdb-wasm docs",
+        "benchmarks:build:browser": "yarn workspace @applyinnovations/benchmarks build:browser",
+        "benchmarks:build:node": "yarn workspace @applyinnovations/benchmarks build:node",
+        "benchmarks:build": "yarn workspace @applyinnovations/benchmarks build"
     },
     "devDependencies": {
         "badge-maker": "^3.3.1"
