--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "@duckdb/benchmarks",
+    "name": "@applyinnovations/benchmarks",
     "version": "1.11.0",
     "license": "MIT",
     "private": true,
     "dependencies": {
-        "@duckdb/duckdb-wasm": "file:../duckdb-wasm",
+        "@applyinnovations/duckdb-wasm": "file:../duckdb-wasm",
         "apache-arrow": "^17.0.0",
         "apache-arrow-3": "npm:apache-arrow@^3.0.0",
         "arquero": "^5.4.0",
