--- a/packages/duckdb-wasm-shell/package.json
+++ b/packages/duckdb-wasm-shell/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "@duckdb/duckdb-wasm-shell",
+    "name": "@applyinnovations/duckdb-wasm-shell",
     "version": "1.11.0",
     "description": "",
     "author": "Andre Kohn <kohn.a@outlook.com>",
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/duckdb/duckdb-wasm.git"
+        "url": "https://github.com/applyinnovations/duckdb-wasm.git"
     },
     "keywords": [
         "sql",
@@ -24,7 +24,7 @@
         "csv"
     ],
     "dependencies": {
-        "@duckdb/duckdb-wasm": "file:../duckdb-wasm",
+        "@applyinnovations/duckdb-wasm": "file:../duckdb-wasm",
         "xterm": "^5.3.0",
         "xterm-addon-fit": "^0.8.0",
         "xterm-addon-web-links": "^0.9.0",
