--- a/packages/duckdb-wasm/package.json
+++ b/packages/duckdb-wasm/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "@duckdb/duckdb-wasm",
+    "name": "@applyinnovations/duckdb-wasm",
     "version": "1.11.0",
     "description": "DuckDB powered by WebAssembly",
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/duckdb/duckdb-wasm.git"
+        "url": "https://github.com/applyinnovations/duckdb-wasm.git"
     },
     "keywords": [
         "sql",
