--- a/packages/react-duckdb/package.json
+++ b/packages/react-duckdb/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "@duckdb/react-duckdb",
+    "name": "@applyinnovations/react-duckdb",
     "version": "1.11.0",
     "description": "React components for DuckDB-Wasm",
     "license": "MIT",
     "repository": {
         "type": "git",
-        "url": "https://github.com/duckdb/duckdb-wasm.git"
+        "url": "https://github.com/applyinnovations/duckdb-wasm.git"
     },
     "keywords": [
         "sql",
