--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1074,6 +1074,7 @@ jobs:
                       yarn workspace @applyinnovations/duckdb-wasm test:node
 
             - name: Deploy GitHub Page
+              continue-on-error: true
               if: github.ref == 'refs/heads/main'
               run: |
                   git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
